--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="activity_main__title">Jobsity - TV Maze</string>
     <string name="no_internet">No Internet. Try again later.</string>
     <string name="item_shows__summary"><![CDATA[<p><b>Under the Dome</b> is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome. The town\'s inhabitants must deal with surviving the post-apocalyptic conditions while searching for answers about the dome, where it came from and if and when it will go away.</p>]]></string>
-    <string name="action_settings">Settings</string>
+
+    <string name="search_error">It happened an error while searching the show. Try again later.</string>
+    <string name="search_title">Search by shows</string>
+    <string name="search_hint">Type the name of the show</string>
 </resources>
