Bug fix on DetailsPresenterImpl and ShowEpisodeActivity. - Those fixes are now avoiding crashes when clicking on certain items that do not contain extras. - Styles ShowDetails_LabelTextView and ShowDetails_TextView created.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,8 @@
     <string name="activity_show_episode__season">Season:</string>
     <string name="activity_show_episode__summary">Summary:</string>
 
+    <string name="activity_show_details__empty_field">&lt;&lt; Empty field &gt;&gt;</string>
+
     <string name="favorites_title">Favorite Series</string>
 
     <string name="error_searching_shows">Error searching shows.</string>
