--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="search_error">It happened an error while searching the show. Try again later.</string>
     <string name="search_title">Search by shows</string>
     <string name="search_hint">Type the name of the show</string>
+    <string name="favorites_title">Favorite Series</string>
+    <string name="restore_title">Restore original list</string>
 
     <string name="item_episodes__season">Season: %1$s</string>
     <string name="item_episodes__number">Number: %1$s</string>
@@ -25,8 +27,6 @@
     <string name="activity_show_episode__summary">Summary:</string>
 
     <string name="activity_show_details__empty_field">&lt;&lt; Empty field &gt;&gt;</string>
-
-    <string name="favorites_title">Favorite Series</string>
 
     <string name="error_searching_shows">Error searching shows.</string>
 </resources>
