--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,18 @@
     <string name="app_name">JobsityChallenge</string>
 
     <string name="activity_main__title">Jobsity - TV Maze</string>
-    <string name="no_internet">No Internet. Try again later.</string>
+    <string name="activity_person_search__title">Search for Person</string>
 
+    <string name="no_internet">No Internet. Try again later.</string>
     <string name="item_shows__summary"><![CDATA[<p><b>Under the Dome</b> is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome. The town\'s inhabitants must deal with surviving the post-apocalyptic conditions while searching for answers about the dome, where it came from and if and when it will go away.</p>]]></string>
 
     <string name="search_error">It happened an error while searching the show. Try again later.</string>
-    <string name="search_title">Search by shows</string>
-    <string name="search_hint">Type the name of the show</string>
+    <string name="search_title">Search by Shows</string>
+    <string name="person_search_title">Search by Person</string>
+
+    <string name="search_hint">Type the name of the Show</string>
+    <string name="person_search_hint">Type the name of the Person</string>
+
     <string name="favorites_title">Favorite Series</string>
     <string name="restore_title">Restore Original List</string>
 
@@ -54,4 +59,7 @@
     <string name="activity_login__pin">PIN Login</string>
     <string name="activity_main__empty_recycler_view">There are no Favorite Series.</string>
     <string name="activity_login__default">Default Login</string>
+
+    <string name="activity_person_search__empty_recycler_view">There are no People selected.</string>
+    <string name="item_person__lack_of_time">Unfortunately, I didn\'t got time to implement this feature:\n- After clicking on a Person, the application should show the Details of that Person.</string>
 </resources>
